--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@ server.jar
 .env
 
 # Ignore world folders
-world/
-world_nether/
-world_the_end/
+world
+world_nether
+world_the_end
 
 # Ignore log files
 *.log
