--- a/p/server.yml
+++ b/p/server.yml
@@ -8,6 +8,11 @@ plugins:
   # Custom Plugins #
   ##################
 
+  # Group permissions plugin
+  - name: ObsidianPermissions
+    uri: https://github.com/the-obsidian/ObsidianPermissions/releases/download/v1.0.1/ObsidianPermissions-1.0.1.jar
+    sha: c066bbe79a9abf0a31eabc43434ccbc23b836ad5
+
   # Bridges chat between Minecraft and Discord
   - name: DiscordBridge
     uri: https://github.com/the-obsidian/DiscordBridge/releases/download/v1.3.0/DiscordBridge-1.3.0.jar
@@ -21,6 +26,11 @@ plugins:
   ###################
   # Utility Plugins #
   ###################
+
+  # Provides connectivity between plugins
+  - name: Vault
+    uri: http://dev.bukkit.org/media/files/894/359/Vault.jar
+    sha: 279fb86616065b57d7b2f5531cb213c2f998bb81
 
   # Provides a scripting language for quick scripts
   - name: CommandHelper
