--- a/p/plugins/ObsidianPermissions/config.yml
+++ b/p/plugins/ObsidianPermissions/config.yml
@@ -1,2 +1,20 @@
-groups: []
+groups:
+- name: guest
+  rank: 0
+  display_name: '&6[Guest] &f%p'
+- name: member
+  display_name: '%p'
+  permissions:
+  - modifyworld.*
+- name: moderator
+  rank: 100
+  display_name: '&3[M] &f%p'
+  extends:
+  - member
+- name: admin
+  rank: 1000
+  display_name: '&2[A] &f%p'
+  extends:
+  - moderator
+debug: true
 version: 1.0.1
