--- a/p/server.yml
+++ b/p/server.yml
@@ -8,11 +8,6 @@ plugins:
   # Custom Plugins #
   ##################
 
-  # Group permissions plugin
-  - name: ObsidianPermissions
-    uri: https://github.com/the-obsidian/ObsidianPermissions/releases/download/v1.0.1/ObsidianPermissions-1.0.1.jar
-    sha: c066bbe79a9abf0a31eabc43434ccbc23b836ad5
-
   # Bridges chat between Minecraft and Discord
   - name: DiscordBridge
     uri: https://github.com/the-obsidian/DiscordBridge/releases/download/v1.3.0/DiscordBridge-1.3.0.jar
@@ -31,6 +26,11 @@ plugins:
   ###################
   # Utility Plugins #
   ###################
+
+  # Permission management
+  - name: PermissionsEx
+    uri: http://dev.bukkit.org/media/files/882/992/PermissionsEx-1.23.3.jar
+    sha: b5727097d85dc2a7a501928c6c7113e9d37d25fe
 
   # Provides connectivity between plugins
   - name: Vault
