--- a/p/script/build
+++ b/p/script/build
@@ -6,5 +6,6 @@
 while IFS= read -r -d '' src
 do
   dst="$(echo $src | sed s/\.tmpl\./\./g)"
+  echo "Building $dst" 1>&2
   perl -p -e 's/\$\{([^}:]+)(:([^}:]+))?\}/defined $ENV{$1} ? $ENV{$1} : $3/eg' $src > $dst
 done <  <(find -H "$ROOT_DIR" -name '*.tmpl.*' -print0)
