--- a/p/plugins/LogBlock/config.tmpl.yml
+++ b/p/plugins/LogBlock/config.tmpl.yml
@@ -35,11 +35,11 @@ lookup:
   defaultDist: 20
   linesLimit: 1500
 mysql:
-  password: ${DATABASE_PASS}
+  password: ${DB_PASS}
   host: localhost
   port: 3306
-  database: ${DATABASE_NAME}
-  user: ${DATABASE_USER}
+  database: ${DB_NAME}
+  user: ${DB_USER}
 questioner:
   askRollbacks: true
   askRedos: true
